# tach

./: Cargo.toml  mkdocs.yml  pyproject.toml  tach.toml
docs/usage/: commands.md  mcp-benchmark.md
python/tach/: cli.py
python/tach/mcp/: __init__.py  configuration.py  dependency_map.py  imports.py  linting.py  modularity.py  module_graph.py  onboarding.py  payloads.py  project.py  reporting.py  server.py  testing.py
python/tests/: test_mcp.py
skills/tach/: SKILL.md
