[package]
name = "tach"
version = "0.35.0"
edition = "2024"

[lib]
name = "tach"
crate-type = ["cdylib", "lib"]
bench = false

[dependencies]
pyo3 = { version = "0.28.3", features = ["abi3-py37"] }
regex = "1.12.3"
once_cell = "1.21.4"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", package="ruff_python_ast", tag = "0.15.13" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", package="ruff_python_parser", tag = "0.15.13" }
ruff_linter = { git = "https://github.com/astral-sh/ruff.git", package="ruff_linter", tag = "0.15.13" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", package="ruff_source_file", tag = "0.15.13" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", package="ruff_text_size", tag = "0.15.13" }
cached = { version = "0.59.0", features = ["disk_store"] }
globset = "0.4.18"
toml = "1.0.6"
thiserror = "2.0.18"
serde = { version = "1.0.216", features = ["derive"] }
glob = "0.3.3"
petgraph = "0.8.3"
serde_json = "1.0.149"
tempfile = "3.27.0"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.2"
rayon = "1.12.0"
parking_lot = "0.12.5"
itertools = "0.14.0"
toml_edit = "0.25.4"
console = "0.16.3"
ignore = "0.4.25"
dashmap = { version = "6.2.1", features = ["serde", "rayon", "inline"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.profiling]
inherits = "release"
debug = true


[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.4.0"
