[project]
name = "tach"
version = "0.35.0"
authors = [
    { name = "Caelean Barnes", email = "caeleanb@gmail.com" },
    { name = "Evan Doyle", email = "evanmdoyle@gmail.com" },
]
description = "A Python tool to maintain a modular package architecture."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.27.1",
    "pyyaml~=6.0",
    "tomli>=1.2.2",
    "tomli-w~=1.0",
    "rich>=13.0",
    "prompt-toolkit~=3.0",
    "GitPython~=3.1",
    "networkx>=2.6,<4.0",
    "pydot>=2,<5",
]
keywords = [
    'python',
    'module',
    'package',
    'guard',
    'enforcement',
    'boundary',
    'enforcer',
    'domain',
    'architecture',
]


[dependency-groups]
dev = [
    # Setup
    "pip==26.1.1",
    # Code Quality
    "basedpyright>=1.31.7",
    "ruff==0.15.12",
    # Build/Release
    "setuptools==82.0.1",
    "twine==6.2.0",
    "build==1.5.0",
    "gnumake>=4.4.1",
    # Tests
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "coverage==7.14.0",
    # Rust
    "maturin==1.13.3",
    "rustup>=1.29.0.1 ; sys_platform != 'win32'", # https://github.com/konstin/rustup-pypi/issues/5
]
vscode = [
    "nodejs-wheel>=22.20.0",
    "nox>=2025.5.1",
    "PyHamcrest",
    "python-jsonrpc-server",
]
docs = [
    "pymdown-extensions>=10.0",
    "pillow",
    "cairosvg",
    "zensical>=0.0.2",
]


[project.urls]
Homepage = "https://github.com/gauge-sh/tach"
Issues = "https://github.com/gauge-sh/tach/issues"

[tool.pyprojectx]
cwd = "."

[tool.uv]
default-groups = ["dev", "vscode", "docs"]

[tool.ruff]
src = ["python"]
exclude = ["python/tests/example"]
target-version = "py310"
extend-exclude = [
    "pw",
]
lint.extend-select = ["I", "TC", "UP"]
lint.ignore = ["UP006", "UP007"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["dataclasses.dataclass"]
exempt-modules = ["typing", "typing_extensions"]

[tool.pyright]
include = ["python", "vscode"]
# https://github.com/DetachHead/basedpyright/issues/31
ignore = ["pw", "vscode/bundled", "vscode/.nox", "vscode/node_modules", "python/tests/example/syntax_error_fixture/**"]
exclude = ["pw", "vscode/bundled", "vscode/.nox", "vscode/node_modules", "python/tests/example/syntax_error_fixture/**"]
executionEnvironments = [{ root = "python" }, { root = "vscode" }]
pythonVersion = "3.10"
reportImplicitStringConcatenation = false # conflicts with ruff formatter


[tool.pytest.ini_options]
norecursedirs = ["python/tests/example", "vscode/bundled"]

[build-system]
requires = ["maturin<2.0,>=1.5"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "tach.extension"
features = ["pyo3/extension-module"]
editable-profile = "dev"

[project.scripts]
tach = "tach.start:start"

[project.entry-points.pytest11]
tach = "tach.pytest_plugin"
